# CPP_Diploma

./: CMakeLists.txt
Crawler/: CMakeLists.txt  WebCrawler.cpp
Include/: DB_Client.h  HTML_parser.h  HTTP_HTTPs_Client.h  HTTP_Server.h  INI_File.h  Safe_Queue.h  Utils.h
Ini/: config.ini
Server/: CMakeLists.txt  WebServer.cpp
openssl/x64-windows/lib/pkgconfig/: libcrypto.pc  libssl.pc  openssl.pc
